--- a/Lesson 3/timer-webpack/src/style.css
+++ b/Lesson 3/timer-webpack/src/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'SauceCodePro Nerd Font';
-    background: black;
+    /* background: black; */
     color: white;
     text-align: center;
 }
@@ -8,4 +8,5 @@
 h1 {
     font-weight: normal;
     font-size: 80px;
+    text-shadow: 1px 1px black;
 }
