--- a/FullStack/views/comments.njk
+++ b/FullStack/views/comments.njk
@@ -5,19 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple Comment System</title>
+    <style>
+        body{
+            max-width: 800px;
+            margin: 10px auto;
+            background: #eee;
+            color: #333;
+            line-height: 1.6;
+        }
+        .comment{
+            margin: 1em 0;
+            padding: 0 1em;
+            border: 1px solid #333;
+            border-radius: 5px;
+            background: #fafafa;
+        }
+    </style>
 </head>
 <body>
+<h1>A simple comment system</h1>
     {% for comment in comments %}
+    <div class="comment">
         <h3>{{ comment.author }}</h3>
         <p>{{ comment.message }}</p>
+    </div>
     {% endfor %}
     <form action="/comment" method="post">
         <label for="userid">User ID</label>
-        <input type="text" name="userid" id="userid">
+        <select name="userid" id="userid">
+            {% for user in users %}
+                <option value="{{user.id}}">{{user.name}}</option>
+            {% endfor %}
+        </select>
         <label for="message">Message</label>
         <input type="text" name="message" id="message">
         <input type="submit" value="Submit">
     </form>
-    <h1>asdf</h1>
 </body>
 </html>
