--- a/FullStack/views/comments.njk
+++ b/FullStack/views/comments.njk
@@ -15,10 +15,25 @@
         }
         .comment{
             margin: 1em 0;
-            padding: 0 1em;
+            padding: 1px 1em;
             border: 1px solid #333;
             border-radius: 5px;
             background: #fafafa;
+            position: relative;
+        }
+        {# .comment input[type="text"]{ #}
+        .comment textarea{
+            margin: 0;
+            min-width: 100%;
+            max-width: 100%;
+            min-height: 5em;
+        }
+        .comment input[type="submit"]{
+            {# position: absolute; #}
+            {# float: right; #}
+            {# bottom: 2px; #}
+            display: block;
+            margin: 1em 0;
         }
     </style>
 </head>
@@ -30,15 +45,14 @@
         <p>{{ comment.message }}</p>
     </div>
     {% endfor %}
-    <form action="/comment" method="post">
-        <label for="userid">User ID</label>
+    <form action="/comment" method="post" class="comment">
+        <h3>
         <select name="userid" id="userid">
             {% for user in users %}
                 <option value="{{user.id}}">{{user.name}}</option>
             {% endfor %}
-        </select>
-        <label for="message">Message</label>
-        <input type="text" name="message" id="message">
+        </select></h3>
+        <textarea name="message" id="message" placeholder="message"></textarea>
         <input type="submit" value="Submit">
     </form>
 </body>
